@@ -48,13 +48,11 @@ AC_CONFIG_FILES([Makefile
                  doc/yesterday.sh.1
                  doc/crypt.sh.1
                  doc/gzip.sh.1
-                 doc/grep.sh.1
                  sh-restore/rorrim.sh
                  sh-restore/monthday.sh
                  sh-tools/crypt.sh
                  sh-tools/dump-here.sh
                  sh-tools/dump.sh
-                 sh-tools/grep.sh
                  sh-tools/gzip.sh
                  sh-tools/hist.sh
                  sh-tools/mirror.sh
