@@ -1,51 +1,0 @@
-'\" t
-.TH GREP.SH 1 "10 Apr 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
-        
-.SH NAME
-grep.sh, grep \-  apply a regular expression on \fBrdup\fR's filelist
-
-.SH SYNOPSIS
-.B grep.sh
-[
-.IR OPTIONS
-]
-.IR REGEXP
-
-.SH DESCRIPTION
-\fBgrep.sh\fR applies a regular expression on the filename part in the
-output of \fBrdup\fR. REGEXP is a POSIX regular expression as documented
-in regex(3). 
-.PP
-For example,
-.PP
-        rdup /dev/null ~/Documents | grep.sh -f 'z$' 
-.PP
-lists those files that end in a 'z'.
-
-.SH OPTIONS
-.TP
-.B \-a
-Match files, links and directories.
-.TP
-.B \-c
-This option is ignored, \fBgrep.sh\fR always works on the files'
-content. This "feature" was added because all rdup-util scripts have
-such an option.
-.TP
-.B \-d
-Only match directories.
-.TP
-.B \-f
-Only match files and links. This is the default.
-.TP
-.B \-h
-Short help message.
-.TP
-.B \-V
-Show the version.
-
-.SH BUGS
-\fBrdup\fR \fI\-c\fR output is not supported.
-
-.SH SEE ALSO
-rdup(8) and regex(3).
