@@ -3,6 +3,7 @@ xx May 2006: 0.2.9 Miek <miek@miek.nl>
    * gzip.sh, crypt.sh: ignore '-c' option
    * monthday.sh: implement -c option
    * monthday.sH: also process the last file
+   * removed grep.sh from rdup-utils
 
 
 22 Apr 2006: 0.2.8 Miek <miek@miek.nl>
